[package]
name = "torch-build"
version = "0.1.0"
edition = "2021"
description = "Utilities to link libtorch FFI interface."
authors = ["Jerry Lin <jerry73204@gmail.com>"]
categories = ["parsing"]
documentation = "https://docs.rs/torch-build/"
repository = "https://github.com/jerry73204/torch-build.git"
homepage = "https://github.com/jerry73204/torch-build"
build = "build.rs"
readme = "README.md"
license = "MIT"

[dependencies]
anyhow = "1.0.45"
cc = "1.0.72"
cfg-if = "1.0.0"
indexmap = "1.7.0"
itertools = "0.10.1"
log = "0.4.14"
once_cell = "1.8.0"
os_info = "3.0.7"
regex = "1.5.4"
rustacuda = "0.1.3"
ureq = { version = "2.3.0", optional = true }
zip = "0.5.13"
python-config = "0.1.0"

[features]
default = ["download-libtorch"]
download-libtorch = ["ureq"]
parallel-build = ["cc/parallel"]

[build-dependencies]
anyhow = "1.0.45"
cc = "1.0.72"
