[package]
name = "torch-build"
version = "0.1.0"
edition = "2021"
description = "Utilities to link libtorch FFI interface."
authors = ["Jerry Lin <jerry73204@gmail.com>"]
categories = ["parsing"]
documentation = "https://docs.rs/torch-build/"
repository = "https://github.com/jerry73204/torch-build.git"
homepage = "https://github.com/jerry73204/torch-build"
build = "build.rs"
readme = "README.md"
license = "MIT"

[dependencies]
anyhow = "1.0.56"
cc = "1.0.73"
cfg-if = "1.0.0"
indexmap = "1.8.1"
itertools = "0.10.3"
log = "0.4.16"
once_cell = "1.10.0"
os_info = "3.2.0"
regex = "1.5.5"
rustacuda = "0.1.3"
ureq = { version = "2.4.0", optional = true }
zip = "0.6.1"
python-config = "0.1.0"

[features]
default = ["download-libtorch"]
download-libtorch = ["ureq"]
parallel-build = ["cc/parallel"]

[build-dependencies]
anyhow = "1.0.56"
cc = "1.0.73"
