[package]
name = "torch-build"
version = "0.1.0"
edition = "2021"
description = "Utilities to link libtorch FFI interface."
authors = ["Jerry Lin <jerry73204@gmail.com>"]
categories = ["parsing"]
documentation = "https://docs.rs/torch-build/"
repository = "https://github.com/jerry73204/torch-build.git"
homepage = "https://github.com/jerry73204/torch-build"
build = "build.rs"
readme = "README.md"
license = "MIT"

[dependencies]
anyhow = "1.0.75"
cc = "1.0.83"
cfg-if = "1.0.0"
indexmap = "1.9.3"
itertools = "0.10.5"
log = "0.4.20"
once_cell = "1.18.0"
os_info = "3.7.0"
regex = "1.9.5"
rustacuda = "0.1.3"
zip = "0.6.6"
python-config = "0.1.0"
serde = { version = "1.0.188", features = ["derive"] }
toml = "0.7.8"
ureq = { version = "2.7.1", optional = true }

[features]
default = []
download-libtorch = ["ureq"]
parallel-build = ["cc/parallel"]

[build-dependencies]
anyhow = "1.0.75"
cc = "1.0.83"
